# simple-particle-sim-rust

./: Cargo.toml  particles.rs
src/: main.rs
