[package]
name = "rust-simple-particle-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
half = "2.3.1"
matrix = "0.22.0"
winit = "0.29.10"
softbuffer = "0.4.1"
rand = "0.8.5"
simple-particle-sim = { path = "../simple-particle-sim" }
